kubernetes/cluster-services/oauth2-proxy/templates/deployment-oauth2-proxy-redirector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy-redirector
  name: oauth2-proxy-redirector
  namespace: oauth2-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: oauth2-proxy-redirector
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy-redirector
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        eks.amazonaws.com/capacityType: ON_DEMAND
      containers:
        - name: nginx
          image: nginx:1.17-alpine
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 0.2
              memory: 512Mi
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-redirector
              mountPath: /etc/nginx/
              readOnly: true
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 80
            initialDelaySeconds: 3
            timeoutSeconds: 2
            failureThreshold: 2
      volumes:
        - name: nginx-redirector
          configMap:
            name: oauth2-proxy-redirector
