kubernetes/cluster-services/oauth2-proxy/templates/service-oauth2-proxy-redirector.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy-redirector
  name: oauth2-proxy-redirector
  namespace: oauth2-proxy
spec:
  ports:
  - name: http
    protocol: TCP
    targetPort: http
    port: 80
  selector:
    k8s-app: oauth2-proxy-redirector
